--- a/data/stories.yml
+++ b/data/stories.yml
@@ -11,6 +11,7 @@ stories:
     - location: delhi
   - slot_was_set:
     - location: delhi
+  - action: action_validate_location
   - action: utter_ask_cuisine
   - intent: restaurant_search
     entities:
@@ -30,6 +31,7 @@ stories:
     - location: delhi
   - slot_was_set:
     - location: delhi
+  - action: action_validate_location
   - action: utter_ask_cuisine
   - intent: restaurant_search
     entities:
@@ -50,6 +52,7 @@ stories:
     - location: delhi
   - slot_was_set:
     - location: delhi
+  - action: action_validate_location
   - action: utter_ask_cuisine
   - intent: restaurant_search
     entities:
@@ -69,6 +72,7 @@ stories:
     - location: italy
   - slot_was_set:
     - location: italy
+  - action: action_validate_location
   - action: utter_ask_cuisine
   - intent: restaurant_search
     entities:
@@ -89,6 +93,7 @@ stories:
     - location: delhi
   - slot_was_set:
     - location: delhi
+  - action: action_validate_location
   - action: utter_ask_cuisine
   - intent: restaurant_search
     entities:
@@ -199,6 +204,7 @@ stories:
   steps:
   - intent: thankyou
   - action: utter_noworries
+
 - story: chitchat
   steps:
   - or:
@@ -214,6 +220,7 @@ stories:
     - intent: telljoke
     - intent: ask_whatismyname
   - action: action_chitchat
+
 - story: interactive_story_1
   steps:
   - intent: greet
@@ -266,6 +273,8 @@ stories:
   - action: action_send_mail
   - intent: goodbye
   - action: utter_goodbye
+  - action: action_restart
+
 - story: interactive_story_1
   steps:
   - intent: greet
@@ -296,8 +305,6 @@ stories:
     - budgetmax: 700
   - slot_was_set:
     - budget_ok: true
-  - action: utter_people
-  - intent: people
   - action: utter_ask_email
   - intent: send_email
     entities:
@@ -310,6 +317,8 @@ stories:
   - action: action_send_mail
   - intent: affirm
   - action: utter_goodbye
+  - action: action_restart
+
 - story: interactive_story_1
   steps:
   - intent: greet
@@ -335,8 +344,6 @@ stories:
     - location: Ahmedabad
   - slot_was_set:
     - location_ok: true
-  - action: utter_people
-  - intent: people
   - action: utter_ask_budget_for_two
   - intent: restaurant_search
     entities:
@@ -372,6 +379,8 @@ stories:
   - action: action_send_mail
   - intent: affirm
   - action: utter_goodbye
+  - action: action_restart
+
 - story: interactive_story_1
   steps:
   - intent: greet
@@ -424,6 +433,8 @@ stories:
   - action: action_send_mail
   - intent: affirm
   - action: utter_goodbye
+  - action: action_restart
+
 - story: interactive_story_1
   steps:
   - intent: greet
@@ -488,3 +499,330 @@ stories:
   - intent: affirm
   - action: utter_goodbye
   - intent: goodbye
+  - action: action_restart
+
+- story: interactive_story_1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: restaurant_search
+    entities:
+    - location: delhi
+  - slot_was_set:
+    - location: delhi
+  - action: action_validate_location
+  - slot_was_set:
+    - location: delhi
+  - slot_was_set:
+    - location_ok: true
+  - action: utter_ask_budget_for_two
+  - intent: restaurant_search
+    entities:
+    - budgetmin: '300'
+    - budgetmax: '700'
+  - slot_was_set:
+    - budgetmax: '700'
+  - slot_was_set:
+    - budgetmin: '300'
+  - action: action_validate_budget
+  - slot_was_set:
+    - budgetmin: 300
+  - slot_was_set:
+    - budgetmax: 700
+  - slot_was_set:
+    - budget_ok: true
+  - action: utter_ask_cuisine
+  - action: utter_ask_cuisine
+  - intent: restaurant_search
+    entities:
+    - cuisine: Italian
+  - slot_was_set:
+    - cuisine: Italian
+  - action: action_search_restaurants
+  - slot_was_set:
+    - location: delhi
+  - slot_was_set:
+    - restaurant_exist: true
+  - intent: send_email
+  - action: action_send_mail
+  - intent: send_email
+  - action: action_restart
+
+- story: interactive_story_2
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: restaurant_search
+    entities:
+    - location: Delhi
+  - slot_was_set:
+    - location: Delhi
+  - action: action_validate_location
+  - slot_was_set:
+    - location: Delhi
+  - slot_was_set:
+    - location_ok: true
+  - action: utter_ask_cuisine
+  - intent: restaurant_search
+    entities:
+    - cuisine: chinese
+  - slot_was_set:
+    - cuisine: chinese
+  - action: utter_ask_budget_for_two
+  - intent: restaurant_search
+    entities:
+    - budgetmin: '300'
+    - budgetmax: '700'
+  - slot_was_set:
+    - budgetmax: '700'
+  - slot_was_set:
+    - budgetmin: '300'
+  - action: action_validate_budget
+  - slot_was_set:
+    - budgetmin: 300
+  - slot_was_set:
+    - budgetmax: 700
+  - slot_was_set:
+    - budget_ok: true
+  - action: action_search_restaurants
+  - slot_was_set:
+    - location: Delhi
+  - slot_was_set:
+    - restaurant_exist: true
+  - action: utter_ask_needemail
+  - intent: affirm
+  - action: utter_ask_email
+  - intent: send_email
+    entities:
+    - email: gaurav.chopra13@gmail.com
+  - slot_was_set:
+    - email: gaurav.chopra13@gmail.com
+  - action: action_validate_email
+  - slot_was_set:
+    - email_ok: true
+  - action: action_send_mail
+  - intent: thankyou
+  - action: utter_noworries
+  - action: action_restart
+
+- story: interactive_story_1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: restaurant_search
+    entities:
+    - location: America
+  - slot_was_set:
+    - location: America
+  - action: utter_ask_cuisine
+  - intent: restaurant_search
+    entities:
+    - cuisine: Italian
+  - slot_was_set:
+    - cuisine: Italian
+  - action: action_validate_location
+  - slot_was_set:
+    - location: null
+  - slot_was_set:
+    - location_ok: false
+  - action: utter_ask_location
+  - intent: restaurant_search
+    entities:
+    - location: pune
+  - slot_was_set:
+    - location: pune
+  - action: action_validate_location
+  - slot_was_set:
+    - location: pune
+  - slot_was_set:
+    - location_ok: true
+  - action: utter_ask_budget_for_two
+  - intent: restaurant_search
+    entities:
+    - budgetmin: '300'
+    - budgetmax: '700'
+  - slot_was_set:
+    - budgetmax: '700'
+  - slot_was_set:
+    - budgetmin: '300'
+  - action: utter_ask_cuisine
+  - action: utter_ask_cuisine
+  - intent: restaurant_search
+    entities:
+    - cuisine: South Indian
+  - slot_was_set:
+    - cuisine: South Indian
+  - action: action_search_restaurants
+  - slot_was_set:
+    - location: pune
+  - slot_was_set:
+    - restaurant_exist: true
+  - action: utter_ask_needemail
+  - intent: affirm
+  - action: utter_ask_email
+  - intent: send_email
+    entities:
+    - email: gaurav.chopra13@gmail.com
+  - slot_was_set:
+    - email: gaurav.chopra13@gmail.com
+  - action: action_validate_email
+  - slot_was_set:
+    - email_ok: true
+  - action: action_send_mail
+  - intent: affirm
+  - action: utter_goodbye
+  - intent: goodbye
+  - action: utter_goodbye
+  - action: action_restart
+
+- story: interactive_story_1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: restaurant_search
+    entities:
+    - location: Mumbai
+  - slot_was_set:
+    - location: Mumbai
+  - action: action_validate_location
+  - slot_was_set:
+    - location: Mumbai
+  - slot_was_set:
+    - location_ok: true
+  - action: utter_ask_cuisine
+  - intent: restaurant_search
+    entities:
+    - cuisine: Mexican
+  - slot_was_set:
+    - cuisine: Mexican
+  - action: utter_ask_budget_for_two
+  - intent: restaurant_search
+    entities:
+    - budgetmin: '300'
+    - budgetmax: '700'
+  - slot_was_set:
+    - budgetmax: '700'
+  - slot_was_set:
+    - budgetmin: '300'
+  - action: action_validate_budget
+  - slot_was_set:
+    - budgetmin: 300
+  - slot_was_set:
+    - budgetmax: 700
+  - slot_was_set:
+    - budget_ok: true
+  - action: action_search_restaurants
+  - slot_was_set:
+    - location: Mumbai
+  - slot_was_set:
+    - restaurant_exist: false
+  - action: utter_ask_needemail
+  - intent: deny
+  - action: utter_goodbye
+  - intent: restaurant_search
+    entities:
+    - location: Pune
+  - slot_was_set:
+    - location: Pune
+  - action: action_validate_location
+  - slot_was_set:
+    - location: Pune
+  - slot_was_set:
+    - location_ok: true
+  - action: utter_ask_cuisine
+  - intent: restaurant_search
+    entities:
+    - cuisine: South Indian
+  - slot_was_set:
+    - cuisine: South Indian
+  - action: utter_ask_budget_for_two
+  - intent: restaurant_search
+    entities:
+    - budgetmin: '0'
+    - budgetmax: '300'
+  - slot_was_set:
+    - budgetmax: '300'
+  - slot_was_set:
+    - budgetmin: '0'
+  - action: action_validate_budget
+  - slot_was_set:
+    - budgetmin: 0
+  - slot_was_set:
+    - budgetmax: 300
+  - slot_was_set:
+    - budget_ok: true
+  - action: action_search_restaurants
+  - slot_was_set:
+    - location: Pune
+  - slot_was_set:
+    - restaurant_exist: false
+  - action: utter_ask_needemail
+  - intent: affirm
+  - action: utter_ask_email
+  - intent: send_email
+    entities:
+    - email: gaurav.chopra13@gmail.com
+  - slot_was_set:
+    - email: gaurav.chopra13@gmail.com
+  - action: action_validate_email
+  - slot_was_set:
+    - email_ok: true
+  - action: action_send_mail
+  - intent: affirm
+  - action: utter_goodbye
+  - action: action_restart
+
+- story: interactive_story_2
+  steps:
+  - intent: restaurant_search
+    entities:
+    - location: Delhi
+  - slot_was_set:
+    - location: Delhi
+  - action: action_validate_location
+  - slot_was_set:
+    - location: Delhi
+  - slot_was_set:
+    - location_ok: true
+  - action: utter_ask_cuisine
+  - intent: restaurant_search
+    entities:
+    - cuisine: North Indian
+  - slot_was_set:
+    - cuisine: North Indian
+  - action: utter_ask_budget_for_two
+  - intent: restaurant_search
+    entities:
+    - budgetmin: '300'
+    - budgetmax: '700'
+  - slot_was_set:
+    - budgetmax: '700'
+  - slot_was_set:
+    - budgetmin: '300'
+  - action: action_validate_budget
+  - slot_was_set:
+    - budgetmin: 300
+  - slot_was_set:
+    - budgetmax: 700
+  - slot_was_set:
+    - budget_ok: true
+  - action: action_search_restaurants
+  - slot_was_set:
+    - location: Delhi
+  - slot_was_set:
+    - restaurant_exist: true
+  - action: utter_ask_needemail
+  - intent: affirm
+  - action: utter_ask_email
+  - intent: send_email
+    entities:
+    - email: gaurav.chopra13@gmail.com
+  - slot_was_set:
+    - email: gaurav.chopra13@gmail.com
+  - action: action_validate_email
+  - slot_was_set:
+    - email_ok: true
+  - action: action_send_mail
+  - intent: thankyou
+  - action: utter_noworries
+  - action: action_restart
