--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1249,3 +1249,382 @@ stories:
   - intent: thankyou
   - action: utter_noworries
   - action: action_restart
+
+
+- story: interactive_story_1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: restaurant_search
+    entities:
+    - location: Rishikesh
+  - slot_was_set:
+    - location: Rishikesh
+  - action: action_validate_location
+  - slot_was_set:
+    - location: null
+  - slot_was_set:
+    - location_ok: false
+  - intent: restaurant_search
+    entities:
+    - location: Allahabad
+  - slot_was_set:
+    - location: Allahabad
+  - action: action_validate_location
+  - slot_was_set:
+    - location: null
+  - slot_was_set:
+    - location_ok: false
+  - intent: restaurant_search
+    entities:
+    - location: Delhi
+  - slot_was_set:
+    - location: Delhi
+  - action: action_validate_location
+  - slot_was_set:
+    - location: Delhi
+  - slot_was_set:
+    - location_ok: true
+  - action: utter_ask_cuisine
+  - intent: restaurant_search
+    entities:
+    - cuisine: North Indian
+  - slot_was_set:
+    - cuisine: North Indian
+  - action: utter_ask_budget_for_two
+  - intent: restaurant_search
+    entities:
+    - budgetmin: '700'
+    - budgetmax: '10000'
+  - slot_was_set:
+    - budgetmax: '10000'
+  - slot_was_set:
+    - budgetmin: '700'
+  - action: action_validate_budget
+  - slot_was_set:
+    - budgetmin: 700
+  - slot_was_set:
+    - budgetmax: 10000
+  - slot_was_set:
+    - budget_ok: true
+  - action: action_search_restaurants
+  - slot_was_set:
+    - location: Delhi
+  - slot_was_set:
+    - restaurant_exist: true
+  - action: utter_ask_needemail
+  - intent: affirm
+  - action: utter_ask_email
+  - intent: send_email
+    entities:
+    - email: gaurav.chopra13@gmail.com
+  - slot_was_set:
+    - email: gaurav.chopra13@gmail.com
+  - action: action_validate_email
+  - slot_was_set:
+    - email_ok: true
+  - action: action_send_mail
+  - intent: thankyou
+  - action: utter_noworries
+  - action: action_restart
+
+- story: interactive_story_1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: restaurant_search
+    entities:
+    - location: agra
+  - slot_was_set:
+    - location: agra
+  - action: action_validate_location
+  - slot_was_set:
+    - location: agra
+  - slot_was_set:
+    - location_ok: true
+  - action: utter_ask_budget_for_two
+  - intent: restaurant_search
+    entities:
+    - budgetmin: '300'
+    - budgetmax: '700'
+  - slot_was_set:
+    - budgetmax: '700'
+  - slot_was_set:
+    - budgetmin: '300'
+  - action: action_validate_budget
+  - slot_was_set:
+    - budgetmin: 300
+  - slot_was_set:
+    - budgetmax: 700
+  - slot_was_set:
+    - budget_ok: true
+  - action: utter_ask_cuisine
+  - action: utter_ask_cuisine
+  - intent: restaurant_search
+    entities:
+    - cuisine: North Indian
+  - slot_was_set:
+    - cuisine: North Indian
+  - action: action_search_restaurants
+  - slot_was_set:
+    - location: agra
+  - slot_was_set:
+    - restaurant_exist: true
+  - action: utter_ask_needemail
+  - intent: affirm
+  - action: utter_ask_email
+  - intent: send_email
+    entities:
+    - email: gaurav.chopra13@gmail.com
+  - slot_was_set:
+    - email: gaurav.chopra13@gmail.com
+  - action: action_validate_email
+  - slot_was_set:
+    - email_ok: true
+  - action: action_send_mail
+  - intent: thankyou
+  - action: utter_noworries
+  - action: action_restart
+
+- story: interactive_story_2
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: restaurant_search
+    entities:
+    - location: rishikesh
+  - slot_was_set:
+    - location: rishikesh
+  - action: action_validate_location
+  - slot_was_set:
+    - location: null
+  - slot_was_set:
+    - location_ok: false
+  - intent: restaurant_search
+    entities:
+    - location: Mumbai
+  - slot_was_set:
+    - location: Mumbai
+  - action: action_validate_location
+  - slot_was_set:
+    - location: Mumbai
+  - slot_was_set:
+    - location_ok: true
+  - action: utter_ask_cuisine
+  - intent: restaurant_search
+    entities:
+    - cuisine: North Indian
+  - slot_was_set:
+    - cuisine: North Indian
+  - action: utter_ask_budget_for_two
+  - intent: restaurant_search
+    entities:
+    - budgetmin: '700'
+    - budgetmax: '10000'
+  - slot_was_set:
+    - budgetmax: '10000'
+  - slot_was_set:
+    - budgetmin: '700'
+  - action: action_validate_budget
+  - slot_was_set:
+    - budgetmin: 700
+  - slot_was_set:
+    - budgetmax: 10000
+  - slot_was_set:
+    - budget_ok: true
+  - action: action_search_restaurants
+  - slot_was_set:
+    - location: Mumbai
+  - slot_was_set:
+    - restaurant_exist: true
+  - action: utter_ask_needemail
+  - intent: affirm
+  - action: utter_ask_email
+  - intent: send_email
+    entities:
+    - email: mayankmkl@gmail.com
+  - slot_was_set:
+    - email: mayankmkl@gmail.com
+  - action: action_validate_email
+  - slot_was_set:
+    - email_ok: true
+  - action: action_send_mail
+  - intent: handleinsult
+  - action: action_chitchat
+  - intent: greet
+  - action: utter_greet
+  - intent: goodbye
+  - action: utter_goodbye
+  - action: action_restart
+
+
+
+- story: interactive_story_1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: restaurant_search
+    entities:
+    - location: Rishikesh
+  - slot_was_set:
+    - location: Rishikesh
+  - action: action_validate_location
+  - slot_was_set:
+    - location: null
+  - slot_was_set:
+    - location_ok: false
+  - intent: restaurant_search
+    entities:
+    - location: Allahabad
+  - slot_was_set:
+    - location: Allahabad
+  - action: action_validate_location
+  - slot_was_set:
+    - location: null
+  - slot_was_set:
+    - location_ok: false
+  - intent: restaurant_search
+    entities:
+    - location: Delhi
+  - slot_was_set:
+    - location: Delhi
+  - action: action_validate_location
+  - slot_was_set:
+    - location: Delhi
+  - slot_was_set:
+    - location_ok: true
+  - action: utter_ask_cuisine
+  - intent: restaurant_search
+    entities:
+    - cuisine: North Indian
+  - slot_was_set:
+    - cuisine: North Indian
+  - action: utter_ask_budget_for_two
+  - intent: restaurant_search
+    entities:
+    - budgetmin: '700'
+    - budgetmax: '10000'
+  - slot_was_set:
+    - budgetmax: '10000'
+  - slot_was_set:
+    - budgetmin: '700'
+  - action: action_validate_budget
+  - slot_was_set:
+    - budgetmin: 700
+  - slot_was_set:
+    - budgetmax: 10000
+  - slot_was_set:
+    - budget_ok: true
+  - action: action_search_restaurants
+  - slot_was_set:
+    - location: Delhi
+  - slot_was_set:
+    - restaurant_exist: false
+  - intent: thankyou
+  - action: utter_noworries
+  - action: action_restart
+
+- story: interactive_story_1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: restaurant_search
+    entities:
+    - location: agra
+  - slot_was_set:
+    - location: agra
+  - action: action_validate_location
+  - slot_was_set:
+    - location: agra
+  - slot_was_set:
+    - location_ok: true
+  - action: utter_ask_budget_for_two
+  - intent: restaurant_search
+    entities:
+    - budgetmin: '300'
+    - budgetmax: '700'
+  - slot_was_set:
+    - budgetmax: '700'
+  - slot_was_set:
+    - budgetmin: '300'
+  - action: action_validate_budget
+  - slot_was_set:
+    - budgetmin: 300
+  - slot_was_set:
+    - budgetmax: 700
+  - slot_was_set:
+    - budget_ok: true
+  - action: utter_ask_cuisine
+  - action: utter_ask_cuisine
+  - intent: restaurant_search
+    entities:
+    - cuisine: North Indian
+  - slot_was_set:
+    - cuisine: North Indian
+  - action: action_search_restaurants
+  - slot_was_set:
+    - location: agra
+  - slot_was_set:
+    - restaurant_exist: false
+  - intent: thankyou
+  - action: utter_noworries
+  - action: action_restart
+
+- story: interactive_story_2
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: restaurant_search
+    entities:
+    - location: rishikesh
+  - slot_was_set:
+    - location: rishikesh
+  - action: action_validate_location
+  - slot_was_set:
+    - location: null
+  - slot_was_set:
+    - location_ok: false
+  - intent: restaurant_search
+    entities:
+    - location: Mumbai
+  - slot_was_set:
+    - location: Mumbai
+  - action: action_validate_location
+  - slot_was_set:
+    - location: Mumbai
+  - slot_was_set:
+    - location_ok: true
+  - action: utter_ask_cuisine
+  - intent: restaurant_search
+    entities:
+    - cuisine: North Indian
+  - slot_was_set:
+    - cuisine: North Indian
+  - action: utter_ask_budget_for_two
+  - intent: restaurant_search
+    entities:
+    - budgetmin: '700'
+    - budgetmax: '10000'
+  - slot_was_set:
+    - budgetmax: '10000'
+  - slot_was_set:
+    - budgetmin: '700'
+  - action: action_validate_budget
+  - slot_was_set:
+    - budgetmin: 700
+  - slot_was_set:
+    - budgetmax: 10000
+  - slot_was_set:
+    - budget_ok: true
+  - action: action_search_restaurants
+  - slot_was_set:
+    - location: Mumbai
+  - slot_was_set:
+    - restaurant_exist: false
+  - intent: handleinsult
+  - action: action_chitchat
+  - intent: greet
+  - action: utter_greet
+  - intent: goodbye
+  - action: utter_goodbye
+  - action: action_restart
